# VocaLive

./: .gitignore  AGENT.md  README.md  TODO.md  pyproject.toml
.vocalive/: controller-config.json
docs/: README.md  architecture.md  development.md
src/vocalive/: __init__.py  conversation_window.py  main.py  models.py  runtime.py
src/vocalive/audio/: __init__.py  devices.py  input.py  macos_application.py  output.py  speech_detection.py  vad.py  windows_application.py
src/vocalive/config/: controller_store.py  settings.py
src/vocalive/llm/: __init__.py  base.py  echo.py  gemini.py
src/vocalive/pipeline/: context.py  events.py  interrupt_probe.py  interruption.py  orchestrator.py  playback.py  proactive.py  queues.py  reply_policy.py  request_building.py  resume_summary.py  screen_capture_turn.py  session.py  submission.py  turn_execution.py
src/vocalive/screen/: __init__.py  base.py  macos.py  windows.py
src/vocalive/stt/: __init__.py  base.py  mock.py  moonshine.py  openai.py
src/vocalive/tts/: __init__.py  aivis.py  aivis_manager.py  base.py  mock.py  style_api.py  voicevox.py
tests/unit/: test_aivis.py  test_aivis_manager.py  test_audio_input.py  test_controller.py  test_conversation_window.py  test_gemini.py  test_interrupt_probe.py  test_logging.py  test_main.py  test_moonshine.py  test_openai.py  test_orchestrator.py  test_output.py  test_overlay.py  test_playback.py  test_queues.py  test_request_building.py  test_screen_macos.py  test_screen_windows.py  test_settings.py  test_submission.py  test_windows_application.py
(+7 files in other folders)
