[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "vocalive"
version = "0.1.0"
description = "Adapter-based foundation for a low-latency local voice conversation system."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
voice = [
    "sounddevice>=0.4.6",
    "moonshine-voice",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
